fixed favicons too big on mobile, now max 60%

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -78,7 +78,7 @@
   padding: $spacing_unit/8 $spacing_unit/8 $spacing_unit;
 
   img {
-    width: 100%;
+    width: 60%;
     @include media("screen", ">bp1Width") {
       max-width: 200px;
     }
